# DSPyBridge

./: LICENSE  README.md  README_SIMPLIFIED.md  REFACTOR_SUMMARY.md  Tools_Documentation.md  client_example.py  config.py  finetuning-test.py  main.py  pyproject.toml  retrieval-test.py  test.py  test2.py
app/: __init__.py  main.py
app/api/: __init__.py  agent.py  chat.py  finetuning.py  health.py  info.py  qa.py  react.py  retrieval.py  upload.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  dspy_signatures.py  finetuning_schemas.py  schemas.py
app/services/: __init__.py  dspy_service.py
app/tools/: __init__.py  joke_api.py  joke_tool.py  time_tool.py  tool_manager.py  weather_tool.py
docs/: ai_basics.txt  fastapi_info.txt  python_guide.txt  sample_knowledge.txt
tests/: __init__.py  test_api.py  test_basic.py
train-data/: train_data.csv
