[tool.poetry]
name = "dspyProject"
version = "0.1.0"
description = "providing ai service for chatbot using dspy framework and fastapi"
authors = ["abdelrahman khattab <abdelrahmankhattab9999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.29.0"
python-jose = "^3.5.0"
sqlmodel = "^0.0.24"
dspy-ai = "^2.6.27"
groq = "^0.4.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
