[tool.poetry]
name = "dspyProject"
version = "0.1.0"
description = "providing ai service for chatbot using dspy framework and fastapi"
authors = ["abdelrahman khattab <abdelrahmankhattab9999@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
dspy-ai = "^2.6.27"
python-dotenv = "^1.0.1"
pydantic = "^2.10.5"
requests = "^2.32.3"
orjson = "^3.11.1"
dotenv = "^0.9.9"
dspy = "^2.6.27"
litellm = "^1.75.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --log-level debug"
serve = "python run.py"
test = "pytest tests/ -v"
test-api = "pytest tests/test_api.py -v"
test-basic = "pytest tests/test_basic.py -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
